# xinputd

./: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  README  configure.ac  libtool  make-debug  pre-build  superclean
src/: Makefile.am  config.h  debug.c  debug.h  device_id.h  dll.c  dll.lo  libxinput.la  main.c  server.c  server.h  tools.c  tools.h  xinput.h  xinput1_3_main.c  xinput_gamepad.c  xinput_gamepad.h  xinput_gamepad.lo  xinput_service.c  xinput_service.h  xinput_service.lo  xinput_settings.h  xinput_types.h
src/linux_evdev/: xinput_linux_evdev.c  xinput_linux_evdev.h  xinput_linux_evdev_debug.c  xinput_linux_evdev_debug.h  xinput_linux_evdev_generic.c  xinput_linux_evdev_generic.h  xinput_linux_evdev_translator.c  xinput_linux_evdev_translator.h  xinput_linux_evdev_xboxpad.c  xinput_linux_evdev_xboxpad.h  xinput_linux_evdev_xboxpad_2.c  xinput_linux_evdev_xboxpad_2.h
src/linux_input/: xinput_linux_input.c  xinput_linux_input.h  xinput_linux_input.lo  xinput_linux_input_debug.c  xinput_linux_input_debug.h  xinput_linux_input_debug.lo  xinput_linux_input_generic.c  xinput_linux_input_generic.h  xinput_linux_input_translator.c  xinput_linux_input_translator.h  xinput_linux_input_translator.lo  xinput_linux_input_xboxpad.c  xinput_linux_input_xboxpad.h  xinput_linux_input_xboxpad.lo  xinput_linux_input_xboxpad_2.c  xinput_linux_input_xboxpad_2.h  xinput_linux_input_xboxpad_2.lo
src/linux_joystick/: xinput_linux_joystick.c  xinput_linux_joystick.h
test/xinput-test/: Makefile  Makefile.am  Makefile.in  xinput-test  xinput-test.c
test/xinput-test-gui/: Makefile  Makefile.am  Makefile.in  wxXinputApp.cpp  wxXinputApp.h  wxXinputMain.cpp  wxXinputMain.h  xinput-gui-test
wine/: PKGBUILD.patch  arch-linux-build-package  arch-linux-build-package.sh  arch-linux-install-dependencies.sh  configure.patch  patch-wine.sh  wine-staging-make-archive  wine-staging-make-archive.sh
wine/dlls/xinput1_3/: Makefile.in  xinput1_3.spec
wine/dlls/xinput9_1_0/: Makefile.in
